--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,14 @@
 	box-sizing: border-box;
 }
 
+:root {
+	--clr-neutral-100: hsl(0, 0%, 100%);
+	--clr-primary-100: hsl(205, 15%, 58%);
+	--clr-primary-400: hsl(215, 25%, 27%);
+	--clr-primary-800: hsl(217, 33%, 17%);
+	--clr-primary-900: hsl(218, 33%, 9%);
+  }
+
 body {
 	margin: 0;
 	text-align: center;
@@ -400,6 +408,70 @@ input:active,
 .contact-form button.sent-contact:active {
 	outline: 1px solid #1395ba;
 }
+
+.scroller {
+	margin: 0 auto;
+	max-width: 700px;
+}
+
+.scroller__inner {
+	padding-block: 1rem;
+	display: flex;
+	flex-wrap: wrap;
+	gap: 1rem;
+}
+
+.scroller[data-animated="true"] {
+	overflow: hidden;
+	-webkit-mask: linear-gradient(90deg,
+			transparent,
+			white 20%,
+			white 80%,
+			transparent);
+	mask: linear-gradient(90deg, transparent, white 20%, white 80%, transparent);
+}
+
+.scroller[data-animated="true"] .scroller__inner {
+	width: max-content;
+	flex-wrap: nowrap;
+	animation: scroll var(--_animation-duration, 40s) var(--_animation-direction, forwards) linear infinite;
+}
+
+.scroller[data-direction="right"] {
+	--_animation-direction: reverse;
+}
+
+.scroller[data-direction="left"] {
+	--_animation-direction: forwards;
+}
+
+.scroller[data-speed="fast"] {
+	--_animation-duration: 20s;
+}
+
+.scroller[data-speed="slow"] {
+	--_animation-duration: 60s;
+}
+
+.tag-list {
+	margin: 0;
+	padding-inline: 0;
+	list-style: none;
+}
+
+.tag-list li {
+	padding: 1rem;
+	background: var(--clr-primary-400);
+	border-radius: 0.5rem;
+	box-shadow: 0 0.5rem 1rem -0.25rem var(--clr-primary-900);
+}
+
+@keyframes scroll {
+	to {
+		transform: translate(calc(-50% - 0.5rem));
+	}
+}
+
 
 @media only screen and (max-device-width: 768px) {
 	.box {
